[fix] more white-space nowrap

--- a/assets/base/pills.styl
+++ b/assets/base/pills.styl
@@ -2,6 +2,7 @@
 
 .pills
   margin-bottom: 1.5em
+  white-space: nowrap
 
   a
     border-radius: 20px
