--- a/assets/nodejitsu/footer/base.styl
+++ b/assets/nodejitsu/footer/base.styl
@@ -64,6 +64,7 @@ $light-base = lighten($base-color, 50%)
 
 .copyright
   color: $light-base
+  white-space: nowrap
 
 .credits
   text-align: center
